--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-<!-- nothing here -->
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="style.css" />
+		<title>Mijn portfolio</title>
+	</head>
+	<body>
+		<div class="header">
+			<div class="navigation">
+				<ul>
+					<li>
+						<a href="index.html">Home </a>
+					</li>
+					<li>
+						<a href="fotos.html">Album </a>
+					</li>
+					<li>
+						<a href="aboutme.html">About me </a>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="wrapper">
+			<div class="wrapper-image">
+				<img src="image/image00004.jpeg" />
+			</div>
+			<div class="wrapper-text">
+				<h2>
+					Nostalgjia<br />
+					është një urë <br />
+					që lidh të kaluarën me tashmën!
+				</h2>
+				<p>Nostalgia is a bridge that connects the past with the present!</p>
+			</div>
+		</div>
+	</body>
+</html>
