--- a/aboutme.html
+++ b/aboutme.html
@@ -3,79 +3,159 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="style-aboutme.css" />
+		<link rel="stylesheet" href="style.css" />
+
 		<title>Mijn portfolio</title>
 	</head>
-	<body>
-		<div class="header">
-			<div class="navigation">
-				<ul>
-					<li>
-						<a href="index.html">Home </a>
-					</li>
-					<li>
-						<a href="fotos.html">Album </a>
-					</li>
-					<li>
-						<a href="aboutme.html">About me </a>
-					</li>
-				</ul>
+	<div class="header">
+		<div class="navigation">
+			<div class="hamburger-menu" id="hamburger-menu">
+				<div class="bar"></div>
+				<div class="bar"></div>
+				<div class="bar"></div>
 			</div>
+			<ul>
+				<li>
+					<a href="index.html">Home </a>
+				</li>
+				<li>
+					<a href="fotos.html">Album </a>
+				</li>
+				<li>
+					<a href="aboutme.html" class="active">About me </a>
+				</li>
+			</ul>
 		</div>
+	</div>
+	<div class="lineart">
+		<div class="flower top left">
+			<svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 153.63 838.79">
+				<defs>
+					<style>
+						.cls-1 {
+							stroke-width: 3px;
+						}
 
+						.cls-1,
+						.cls-2 {
+							fill: none;
+							stroke: white;
+							stroke-miterlimit: 10;
+						}
+
+						.cls-2 {
+							stroke-width: 3px;
+						}
+					</style>
+				</defs>
+				<path
+					class="cls-1"
+					d="M30.8.76c-6.23.31-12.18,4.03-15.18,9.5-2.66,4.85-2.49,11.89,2.13,14.94,3.51,2.31,8.11,1.55,12.27,1,15.77-2.1,33.62,1.02,43.68,13.35,6.3,7.71,8.68,18.02,8.53,27.98-.15,9.95-2.6,19.71-5.04,29.35-.93,3.66-1.98,7.54-4.74,10.12-4.6,4.28-11.77,3.28-18.03,3.81-10.54.88-20.48,7.19-25.76,16.35-5.28,9.16-5.76,20.93-1.23,30.49,4.83,10.19,15.85,17.67,27.07,16.59,12.39-1.19,21.65-11.52,32.66-17.32,3.26-1.72,7.02-3.07,10.58-2.1s6.35,5.17,4.66,8.44-8.12,1.99-7.57-1.65c.58-3.78,6.19-3.64,9.57-1.86,8.34,4.39,14.82,14.92,10.29,23.19-1.8,1.4-4.58.73-6.22-.86-1.64-1.59-2.42-3.85-3.15-6.01-1.24-3.7-2.48-7.39-3.72-11.09-1.63,3.96-4.42,7.44-7.95,9.87-2.05,1.41-4.47,2.5-6.95,2.24s-4.88-2.22-4.94-4.7c-.04-1.45.69-2.81,1.53-4,3.17-4.47,8.29-7.5,13.74-8.12-4.72-.84-8.14-5.38-8.96-10.1-.83-4.72.46-9.56,2.19-14.03,4.7-.5,8.8,3.85,9.76,8.49s-.41,9.39-1.76,13.93c3.15-3.11,4.22-7.7,6.44-11.54,2.21-3.83,6.9-7.16,10.85-5.17,3.74,1.89,4.03,7.53,1.63,10.96-2.4,3.44-6.5,5.19-10.39,6.74-1.55.62-3.13,1.24-4.46,2.26-4.4,3.35-4.83,9.75-4.32,15.26.51,5.51,1.48,11.46-1.28,16.25-2.37,4.11-7.06,6.4-11.75,7.13s-9.45.14-14.18-.2c-11.17-.83-22.43-.29-33.48,1.58-7.78,1.32-15.98,3.61-21.1,9.62-5.2,6.09-6.12,14.63-6.71,22.61-.8,10.82-1.24,22.4,4.31,31.73,5.11,8.6,14.65,13.82,24.42,15.95,9.77,2.13,19.91,1.56,29.89.98,2.94-.17,5.96-.36,8.66-1.55,2.91-1.29,5.22-3.66,7.14-6.2,5.48-7.22,8.44-16.3,8.29-25.36-.09-4.87-1.17-9.97-4.44-13.59-3.61-4-9.22-5.49-14.55-6.27-7.88-1.16-16.11-1.18-23.62,1.5-7.5,2.68-14.21,8.35-16.74,15.91-.82,2.46-1.19,5.12-.62,7.65.49,2.15,1.63,4.11,3,5.85,5.13,6.54,13.65,10.27,21.93,9.58,8.28-.68,16.08-5.75,20.06-13.05,1.01-1.84,1.79-4.05,1.04-6.01-.84-2.18-3.23-3.27-5.43-4.05-3.52-1.25-7.25-2.29-10.94-1.75s-7.33,3.01-8.16,6.65c-.8,3.53,1.52,7.47,5,8.48s7.55-1.09,8.75-4.5"
+				/>
+				<path
+					class="cls-2"
+					d="M.78,348.42c2.67-20.3,17.24-38.59,36.43-45.73,8.12-3.02,16.81-4.14,25.44-4.83,16-1.29,32.39-1.15,47.74,3.54,15.36,4.69,29.69,14.39,37.26,28.54,12.81,23.94.75,57.72-24.34,68.12-10.98,4.55-23.25,4.95-35.08,3.89-3.99-.36-8.11-.93-11.51-3.05-7.27-4.52-8.88-14.49-7.86-22.99,1.95-16.27,12.35-32.46,28.15-36.81s35.28,7.56,34.97,23.94c-.27,14.54-15.8,25.68-30.28,24.35-4.09-.38-8.34-1.68-11.05-4.77s-3.23-8.31-.28-11.17c18.33.46,38,12.89,39.2,31.18.87,13.29-7.95,25.27-17.74,34.29-9.8,9.02-21.2,16.69-28.39,27.9-5.47,8.53-8.15,19.18-5.72,29.02,2.42,9.84,10.5,18.47,20.51,20.07,12.39,1.98,26.27-6.21,36.94.39,6.57,4.06,9.08,12.32,10.18,19.97,1.76,12.32,1.01,25.48-5.19,36.26s-18.78,18.48-31.02,16.21c-1.74-5.2-1.66-11,.24-16.15,4.22,11.16,10.55,21.52,18.55,30.38-11.55-2.99-23.28-5.26-35.11-6.8,12.8-3.29,24.76-9.79,34.47-18.75-7.82,14.49-15.64,28.98-23.46,43.47,3.26-8.57,3.9-18.11,1.84-27.04-7.01-7.83-20.31-7.46-28.61-1.03-8.31,6.43-12.12,17.31-12.6,27.8-.25,5.41.32,11,2.82,15.81,5.2,9.98,17.29,14.16,28.46,15.61,11.17,1.45,22.89,1.18,33.06,6,12.3,5.84,20.68,19.8,18.62,33.27-2.05,13.46-15.36,24.64-28.88,23.05-4.03-.47-7.89-1.94-11.92-2.49-12.52-1.7-24.32,5.56-34.88,12.51-4.58,3.02-9.41,6.32-11.57,11.36-4.78,11.12,5.97,22.93,17.01,27.9,8.18,3.68,17.09,5.71,26.06,5.93,8.4.21,17.63-.94,24.45,3.98,6.5,4.68,8.58,13.79,6.93,21.63s-6.37,14.66-11.33,20.94c-8.7,11.01-19.62,21.73-33.52,23.67-13.89,1.93-29.95-9.61-27.44-23.41,1.46-8.02,8.28-13.87,15.06-18.4,5.46-3.64,11.46-6.98,18.01-7.31,6.55-.33,13.71,3.18,15.63,9.45,2.12,6.91-2.92,14.38-9.44,17.51-6.51,3.13-14.05,3.02-21.28,2.84"
+				/>
+			</svg>
+		</div>
+		<div class="star top right">
+			<svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 183.91 840.09">
+				<defs>
+					<style>
+						.cls-1 {
+							stroke-width: 3px;
+						}
+
+						.cls-1,
+						.cls-2,
+						.cls-3 {
+							fill: none;
+							stroke: white;
+							stroke-miterlimit: 10;
+						}
+
+						.cls-2 {
+							stroke-width: 3px;
+						}
+
+						.cls-3 {
+							stroke-width: 3px;
+						}
+					</style>
+				</defs>
+				<path
+					class="cls-3"
+					d="M11.31.6C6.02,5.77,2.4,12.62,1.14,19.91c-.74,4.25-.25,9.46,3.49,11.61,1.88,1.08,4.16,1.11,6.33,1.1,24.04-.02,48.08-.04,72.12-.07,9.37,0,18.74-.02,28.12-.03,2.54,0,5.25.04,7.39,1.4,5.58,3.55,3.2,12.17-.25,17.81-5.69,9.33-13.43,18.45-24.06,20.97-22.35,5.31-41.62-20.45-64.58-19.79-12.92.37-24.94,10.34-27.7,22.97-2.75,12.63,4.03,26.7,15.62,32.42,15.18,7.49,33.24.72,48.58-6.44s32.68-14.86,48.54-8.96c1.14.42,2.28.93,3.16,1.78,1.35,1.3,1.88,3.22,2.31,5.04,2.12,9.08,2.91,18.78-.09,27.61-5.92,17.45-27.91,27.39-44.92,20.32,2.34-8.89,4.67-17.78,7.01-26.67,1.33-5.05,2.72-10.24,5.85-14.42,3.13-4.18,8.45-7.16,13.54-5.99,5.77,1.33,9.33,7.64,9.32,13.56-.01,5.92-2.79,11.47-5.85,16.55-2.91,4.83-9.72,9.78-13.26,5.4-4.25-5.26,5.6-11.62,5.39-18.38,1.86.14,2.96,2.76,1.75,4.19"
+				/>
+				<path
+					class="cls-2"
+					d="M156.89,396.97c-13.31-1.66-26.33-4.92-38.55-9.64-2.13-.82-4.36-1.79-5.51-3.5-1.08-1.62-.97-3.58-1.4-5.39-2.08-8.85-16.44-13.61-16.45-22.64,0-5.52,5.97-10.05,12.4-11.28,6.43-1.23,13.14.08,19.46,1.66,2.89.72,5.99,1.51,8.88.76,3.84-.99,6.1-4.46,6.49-7.81.97-8.44-7.88-16.02-17.76-17.95s-20.22.55-29.5,3.97c-9.28,3.43-18.1,7.84-27.88,10.09-9.77,2.25-21.09,2.01-29.04-3.26-8.84-5.85-11.26-16.85-7.55-25.76s12.56-15.79,22.49-20.26c9.93-4.46,21-6.8,31.93-9.09,6.59-1.38,13.22-2.77,20-3.12,8.3-.43,17.26.59,24.42-2.95,2.42-1.2,4.47-2.86,6.32-4.63,7.66-7.32,12.3-17.13,11.1-26.8-1.2-9.68-8.81-18.92-19.77-22.18-5.96-1.77-12.42-1.76-18.7-2.31-12.77-1.1-26.4-5.39-32.41-14.88-6.19-9.78-2.45-21.66-3.18-32.71-.44-6.55-3.71-14.08-11.29-15.78-9.39-2.11-17.27,5.95-21.99,13.07-4.83,7.29-9.51,15.35-8.04,23.59,4.87-.73,7.91-4.64,11-7.87s8.11-6.28,12.61-4.55c-3.53,14.81,3.94,31.06,18.41,40.08,2.27-4.1,9.58-2.73,14.42-.72,7.23,3.01,14.46,6.02,21.69,9.03-14.42,3.49-31.16-1.28-40.05-11.4"
+				/>
+				<path
+					class="cls-1"
+					d="M183.67,836.72c-14.73,5.54-31.78,2.06-45.15-6.25-13.37-8.31-23.52-20.93-31.96-34.21-9.66-15.21-17.58-34.14-10.81-50.83,9.61-8.53,23.45-13.57,35.54-9.22,12.09,4.35,19.65,20.38,12.46,31.03-8.93,13.23-29.4,8.66-43.54,1.27-6.83-3.56-13.61-7.54-18.81-13.22-9.31-10.16-12.49-24.69-12.12-38.46,1.09-41.56,29.71-76.36,50.24-112.52,25.05-44.12,39.15-94.39,40.7-145.1.43-13.89-.17-28.24-5.87-40.91-5.71-12.67-17.55-23.41-31.43-24.15-19.6-1.04-34.73,16.89-43.69,34.35-23.61,46.01-27.88,101.58-11.57,150.66,1.02,3.06,2.58,6.53,5.73,7.23,3.17.71,6.06-1.81,8.34-4.12,29.58-30.07,60.68-63.05,66.97-104.76,1.49-9.86-1.82-23.55-11.78-23.3-6.83.17-11.12,7.2-14.1,13.34-11.75,24.19-23.51,48.38-35.26,72.56-7.53-8.02-8.11-20.26-6.88-31.19,4.2-37.48,25.34-72.74,56.41-94.12.38,3.5.75,7,1.13,10.5,5.21-.8,10.67.11,15.34,2.56"
+				/>
+			</svg>
+		</div>
+	</div>
+
+	<body id="aboutme">
 		<div class="section1">
 			<div class="foto1">
-				<img src="image/portfolio.jpg" alt="foto 1" />
-				<h2>Wie ben ik?</h2>
+				<img src="image/portfolio.jpeg" alt="foto 1" />
 				<p>
-					Ik ben Rina Zeqiri, 19 jaar oud uit Kosovo. Als dier heb ik een persian cat gekozen omdat zij is rustig en calm, zij heeft ook tijd nodig om comfortable met mensen te voelen, zoals ik. Mijn passies zijn tekenen, naar muziek luisteren, anime
-					en series kijken. Ik heb voor Multimedia Creative Technologies gekozen vanwege mijn liefde voor ICT en creativiteit; voor mij is dit de perfecte combinatie.
+					Ik ben Rina Zeqiri, 19 jaar oud uit Kosovo. Als dier heb ik een persian cat gekozen omdat zij is rustig en calm, <br />
+					zij heeft ook tijd nodig om comfortable met mensen te voelen, zoals ik. Mijn passies zijn tekenen,<br />
+					naar muziek luisteren, anime en series kijken. Ik heb voor Multimedia Creative Technologies gekozen vanwege mijn liefde voor ICT en creativiteit; voor mij is dit de perfecte combinatie.
 				</p>
 			</div>
 
 			<div class="foto">
 				<img src="image/Rina_Zeqiri.png" alt="foto 2" />
-				<h2>Mijn poster</h2>
 				<p>
-					In deze poster heb ik de woorden "It gets better the more you grow" voorgesteld, die afkomstig zijn uit het lied "Teenage Dream" van Olivia Rodrigo. Het lied resoneert sterk met mij, omdat ik voor het grootste deel van mijn leven altijd
-					stress had over de toekomst. Mensen zeiden altijd dat alles goed zou komen met de tijd, maar toch bleef ik gestrest. Olivia Rodrigo is ook mijn favoriete artiest, dus het was logisch dat ik een van haar liedjes koos.
+					In deze poster heb ik de woorden "It gets better the more you grow" <br />
+					voorgesteld, die afkomstig zijn uit het lied "Teenage Dream" van Olivia Rodrigo. Het lied resoneert sterk met mij, omdat ik voor het grootste deel van mijn leven altijd stress had over de toekomst. Mensen zeiden altijd dat alles goed zou
+					komen met de tijd,<br />
+					maar toch bleef ik gestrest. Olivia Rodrigo is ook mijn favoriete artiest, dus het <br />
+					was logisch dat ik een van haar liedjes koos.
 				</p>
 			</div>
 		</div>
 
 		<div class="section2">
 			<div class="foto">
-				<img src="image/talen.jpg" alt="foto 4" />
-				<h2>Talen</h2>
+				<img src="image/talen.png" alt="foto 4" />
 				<p>
-					Ik spreek vier talen, waarvan Albanees mijn moedertaal is. Op jonge leeftijd keek ik veel Engelse YouTube-video's, waardoor ik het snel begreep. Toen ik naar België kwam, ging ik naar een Nederlandstalige school en leerde ik Nederlands.
+					Ik spreek vier talen, waarvan Albanees mijn moedertaal is. <br />
+					Op jonge leeftijd keek ik veel Engelse YouTube-video's, waardoor ik het snel begreep. Toen ik naar België kwam, ging ik naar een Nederlandstalige school en leerde ik Nederlands. <br />
 					Frans blijft uitdagend, maar elk jaar verbeter ik mijn spreekvaardigheid .
 				</p>
 			</div>
 
 			<div class="foto2">
-				<img src="image/pp.jpeg" alt="foto 5" />
-				<h2>ICT</h2>
-				<p>In midelbaar heb ik met de Microsoft-applicaties leren werken, ik hou ook van videos edit dus heb ik van zelf met Cap Cut leren werken. Momenteel ben ik de andere Microsoft-applicaties aan het leeren.</p>
+				<img src="image/ict.png" alt="foto 5" />
+				<p>
+					In midelbaar heb ik met de Microsoft-applicaties leren werken, ik hou ook van videos edit dus heb ik van zelf met Cap Cut leren werken. <br />
+					Momenteel ben ik de andere Microsoft-applicaties aan het leeren.
+				</p>
 			</div>
 		</div>
 
 		<div class="section3">
 			<div class="foto">
-				<img src="image/stage.jpeg" alt="foto 6" />
-				<h2>Stage</h2>
+				<img src="image/stage.png" alt="foto 6" />
 				<p>
-					Ik heb veel ervaring opgedaan tijdens mijn stage. Ik loop stage sinds de 5e klas van de middelbare school. Hierdoor heb ik veel ervaring opgedaan in administratief werk. Sommige stages waren leuker dan andere, maar mijn laatste stage bij
-					radiostudio BRUZZ was een van de leukste stages van mijn leven.
+					Ik heb veel ervaring opgedaan tijdens mijn stage. Ik loop stage sinds de 5e klas van de middelbare school. <br />
+					Hierdoor heb ik veel ervaring opgedaan in administratief werk. Sommige stages waren leuker dan andere, maar mijn laatste stage bij radiostudio BRUZZ was een van de leukste stages van mijn leven.
 				</p>
 			</div>
 
 			<div class="foto">
-				<img src="image/werk.jpeg" alt="foto 7" />
-				<h2>Werk</h2>
+				<img src="image/werk.png" alt="foto 7" />
 				<p>
-					Ik werk als student al één jaar. Mijn eerste baan was bij het Erasmus Ziekenhuis, waar ik moest schoonmaken. Ik vond het niet leuk omdat ik altijd alleen was en er waren veel zieke mensen, wat me verdrietig maakte om ze te zien. De leukste
-					baan was als animator bij De Rink. We hebben veel spelletjes met de kinderen gespeeld, en ik heb verschillende soorten kinderen leren kennen..
+					Ik werk als student al één jaar. Mijn eerste baan was bij het Erasmus Ziekenhuis, waar ik moest schoonmaken. <br />
+					Ik vond het niet leuk omdat ik altijd alleen was en er waren veel zieke mensen, wat me verdrietig maakte om ze te zien. De leukste baan was als animator bij De Rink. We hebben veel spelletjes met de kinderen gespeeld, en ik heb
+					verschillende soorten kinderen leren kennen..
 				</p>
 			</div>
 		</div>
@@ -88,4 +168,9 @@
 			</div>
 		</div>
 	</body>
+	<script>
+		document.getElementById("hamburger-menu").addEventListener("click", function () {
+			document.querySelector(".navigation ul").classList.toggle("show");
+		});
+	</script>
 </html>
